add eventlistener on button click

--- a/hw3/index.html
+++ b/hw3/index.html
@@ -17,8 +17,8 @@
   </ul>
 <textarea name="" cols="30" rows="10"></textarea>
 <div>
-<button onclick="doIt()">Do it!</button>
-<button onclick="refresh()">Reset</button>
+<button id="doIt">Do it!</button>
+<button id="refresh">Reset</button>
 </div>
 </fieldset>
 
@@ -60,14 +60,13 @@
       <label for="text">Message: </label>
       <input id="text" type="text" placeholder="your message">
       <br>
-      <input type="submit" value="Отправить" onclick="check()">
+      <input type="submit" value="Отправить">
       <input type="reset" value="Reset">
     </form>
   </fieldset>
 </fieldset>
 
-<script src="js/task1.js"></script>
-<script src="js/task2.js"></script>
+<script src="js/task.js"></script>
 
 </body>
 </html>
