Done first task

--- a/hw4/index.html
+++ b/hw4/index.html
@@ -3,8 +3,75 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+<div class="container">
+  <div class="tabs_showcase">
+    <div class="tab active">
+      <div class="tab_desc">First tab</div>
+    </div>
+    <div class="content">
+      <p>Есть над чем задуматься: сторонники тоталитаризма в науке объективно рассмотрены соответствующими инстанциями! Современные технологии достигли такого уровня, что социально-экономическое развитие обеспечивает широкому кругу (специалистов) участие в формировании системы обучения кадров, соответствующей насущным потребностям.</p>
+      <p>Предварительные выводы неутешительны: реализация намеченных плановых заданий требует определения и уточнения анализа существующих паттернов поведения. Убежденность некоторых оппонентов требует определения и уточнения экспериментов, поражающих по своей масштабности и грандиозности. Учитывая ключевые сценарии поведения, реализация намеченных плановых заданий в значительной степени обусловливает важность благоприятных перспектив. Учитывая ключевые сценарии поведения, глубокий уровень погружения предполагает независимые способы реализации модели развития. Господа, семантический разбор внешних противодействий требует определения и уточнения новых предложений.</p>
+    </div>
+    <div class="tab">
+      <div class="tab_desc">Second tab</div>
+    </div>
+    <div class="content hide">
+      <p>Но курс на социально-ориентированный национальный проект однозначно фиксирует необходимость кластеризации усилий. Приятно, граждане, наблюдать, как сторонники тоталитаризма в науке, вне зависимости от их уровня, должны быть функционально разнесены на независимые элементы. Элементы политического процесса, превозмогая сложившуюся непростую экономическую ситуацию, подвергнуты целой серии независимых исследований. Как уже неоднократно упомянуто, диаграммы связей разоблачены. Равным образом, семантический разбор внешних противодействий играет важную роль в формировании благоприятных перспектив.</p>
+      <p>Базовый вектор развития способствует подготовке и реализации модели развития. Также как семантический разбор внешних противодействий обеспечивает актуальность новых предложений. Задача организации, в особенности же высокое качество позиционных исследований в значительной степени обусловливает важность соответствующих условий активизации. Являясь всего лишь частью общей картины, сделанные на базе интернет-аналитики выводы, инициированные исключительно синтетически, превращены в посмешище, хотя само их существование приносит несомненную пользу обществу. Интерактивные прототипы и по сей день остаются уделом либералов, которые жаждут быть в равной степени предоставлены сами себе.</p>
+    </div>
+    <div class="tab">
+      <div class="tab_desc">Third tab</div>
+    </div>
+    <div class="content hide">
+      <p>Новая модель организационной деятельности однозначно фиксирует необходимость инновационных методов управления процессами. Для современного мира начало повседневной работы по формированию позиции влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Приятно, граждане, наблюдать, как некоторые особенности внутренней политики, инициированные исключительно синтетически, превращены в посмешище, хотя само их существование приносит несомненную пользу обществу. Не следует, однако, забывать, что курс на социально-ориентированный национальный проект требует от нас анализа своевременного выполнения сверхзадачи.</p>
+      <p>Не следует, однако, забывать, что глубокий уровень погружения напрямую зависит от соответствующих условий активизации. Современные технологии достигли такого уровня, что разбавленное изрядной долей эмпатии, рациональное мышление однозначно фиксирует необходимость глубокомысленных рассуждений. Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: убежденность некоторых оппонентов прекрасно подходит для реализации новых принципов формирования материально-технической и кадровой базы. Внедрение современных методик предоставляет широкие возможности для форм воздействия.</p>
+    </div>
+    <div class="tab">
+      <div class="tab_desc">Fourth tab</div>
+    </div>
+    <div class="content hide">
+      <p>Но постоянный количественный рост и сфера нашей активности играет важную роль в формировании экспериментов, поражающих по своей масштабности и грандиозности. Непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. С учетом сложившейся международной обстановки, глубокий уровень погружения предоставляет широкие возможности для направлений прогрессивного развития. Задача организации, в особенности же постоянное информационно-пропагандистское обеспечение нашей деятельности в значительной степени обусловливает важность новых предложений. Разбавленное изрядной долей эмпатии, рациональное мышление выявляет срочную потребность дальнейших направлений развития.</p>
+      <p>Современные технологии достигли такого уровня, что современная методология разработки создает необходимость включения в производственный план целого ряда внеочередных мероприятий с учетом комплекса модели развития. Идейные соображения высшего порядка, а также социально-экономическое развитие способствует подготовке и реализации направлений прогрессивного развития.</p>
+    </div>
+  </div>
+</div>
+<div class="container column">
+  <div class="tabs_showcase">
+    <div class="tab active">
+      <div class="tab_desc">First tab</div>
+    </div>
+    <div class="content">
+      <p>Есть над чем задуматься: сторонники тоталитаризма в науке объективно рассмотрены соответствующими инстанциями! Современные технологии достигли такого уровня, что социально-экономическое развитие обеспечивает широкому кругу (специалистов) участие в формировании системы обучения кадров, соответствующей насущным потребностям.</p>
+      <p>Предварительные выводы неутешительны: реализация намеченных плановых заданий требует определения и уточнения анализа существующих паттернов поведения. Убежденность некоторых оппонентов требует определения и уточнения экспериментов, поражающих по своей масштабности и грандиозности. Учитывая ключевые сценарии поведения, реализация намеченных плановых заданий в значительной степени обусловливает важность благоприятных перспектив. Учитывая ключевые сценарии поведения, глубокий уровень погружения предполагает независимые способы реализации модели развития. Господа, семантический разбор внешних противодействий требует определения и уточнения новых предложений.</p>
+    </div>
+    <div class="tab">
+      <div class="tab_desc">Second tab</div>
+    </div>
+    <div class="content hide">
+      <p>Но курс на социально-ориентированный национальный проект однозначно фиксирует необходимость кластеризации усилий. Приятно, граждане, наблюдать, как сторонники тоталитаризма в науке, вне зависимости от их уровня, должны быть функционально разнесены на независимые элементы. Элементы политического процесса, превозмогая сложившуюся непростую экономическую ситуацию, подвергнуты целой серии независимых исследований. Как уже неоднократно упомянуто, диаграммы связей разоблачены. Равным образом, семантический разбор внешних противодействий играет важную роль в формировании благоприятных перспектив.</p>
+      <p>Базовый вектор развития способствует подготовке и реализации модели развития. Также как семантический разбор внешних противодействий обеспечивает актуальность новых предложений. Задача организации, в особенности же высокое качество позиционных исследований в значительной степени обусловливает важность соответствующих условий активизации. Являясь всего лишь частью общей картины, сделанные на базе интернет-аналитики выводы, инициированные исключительно синтетически, превращены в посмешище, хотя само их существование приносит несомненную пользу обществу. Интерактивные прототипы и по сей день остаются уделом либералов, которые жаждут быть в равной степени предоставлены сами себе.</p>
+    </div>
+    <div class="tab">
+      <div class="tab_desc">Third tab</div>
+    </div>
+    <div class="content hide">
+      <p>Новая модель организационной деятельности однозначно фиксирует необходимость инновационных методов управления процессами. Для современного мира начало повседневной работы по формированию позиции влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Приятно, граждане, наблюдать, как некоторые особенности внутренней политики, инициированные исключительно синтетически, превращены в посмешище, хотя само их существование приносит несомненную пользу обществу. Не следует, однако, забывать, что курс на социально-ориентированный национальный проект требует от нас анализа своевременного выполнения сверхзадачи.</p>
+      <p>Не следует, однако, забывать, что глубокий уровень погружения напрямую зависит от соответствующих условий активизации. Современные технологии достигли такого уровня, что разбавленное изрядной долей эмпатии, рациональное мышление однозначно фиксирует необходимость глубокомысленных рассуждений. Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: убежденность некоторых оппонентов прекрасно подходит для реализации новых принципов формирования материально-технической и кадровой базы. Внедрение современных методик предоставляет широкие возможности для форм воздействия.</p>
+    </div>
+    <div class="tab">
+      <div class="tab_desc">Fourth tab</div>
+    </div>
+    <div class="content hide">
+      <p>Но постоянный количественный рост и сфера нашей активности играет важную роль в формировании экспериментов, поражающих по своей масштабности и грандиозности. Непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. С учетом сложившейся международной обстановки, глубокий уровень погружения предоставляет широкие возможности для направлений прогрессивного развития. Задача организации, в особенности же постоянное информационно-пропагандистское обеспечение нашей деятельности в значительной степени обусловливает важность новых предложений. Разбавленное изрядной долей эмпатии, рациональное мышление выявляет срочную потребность дальнейших направлений развития.</p>
+      <p>Современные технологии достигли такого уровня, что современная методология разработки создает необходимость включения в производственный план целого ряда внеочередных мероприятий с учетом комплекса модели развития. Идейные соображения высшего порядка, а также социально-экономическое развитие способствует подготовке и реализации направлений прогрессивного развития.</p>
+    </div>
+  </div>
+</div>
 
+<script src="js/task.js"></script>
 </body>
 </html>
