--- a/hw4/2 Cities autocomplete/checkout.html
+++ b/hw4/2 Cities autocomplete/checkout.html
@@ -228,10 +228,12 @@
               address <br>
               <input type="text" placeholder="input Address" class="acc__input_text acc__input_text-capitalize">
             </label>
-            <label class="acc__label test_test">
+            <div id="city_input">
+              <label class="acc__label">
                 city <br>
-                <input type="text" id="city-range" placeholder="input City" class="acc__input_text acc__input_text-capitalize">
+                <input type="text" id="city_range" placeholder="input City" class="acc__input_text acc__input_text-capitalize">
             </label>
+            </div>
             <label class="acc__label">
                   country <br>
             <select class="form-control acc__input_text">
