rename variables add message about wrong city add message about no such city

--- a/hw4/2 Cities autocomplete/index.html
+++ b/hw4/2 Cities autocomplete/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Home Work 3</title>
+  <title>Home Work 4</title>
   <link rel="stylesheet" href="styles/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-
 <h3>Home Work 4</h3>
-
 <fieldset>
   <legend><h4>Задание</h4></legend>
   <h4>В форму обратной связи добавить возможность выбора города обращения.</h4>
@@ -41,18 +39,16 @@
       <label for="text">Message: </label>
       <input id="text" type="text" placeholder="your message">
       <br>
-      <div id="city_input">
-        <label for="city_range" class="acc__label">City: </label>
-        <input type="text" id="city_range" placeholder="input city">
+      <div id="city_input_form">
+        <label for="city_input" class="acc__label">City: </label>
+        <input type="text" id="city_input" placeholder="input city">
       </div>
       <input type="submit" value="Отправить">
       <input type="reset" value="Reset">
     </form>
   </fieldset>
 </fieldset>
-
 <script src="js/task.js"></script>
 <script src="js/citySelect.js"></script>
 </body>
 </html>
-
