--- a/hw4/2 Cities autocomplete/index.html
+++ b/hw4/2 Cities autocomplete/index.html
@@ -42,6 +42,14 @@
       <div id="city_input_form">
         <label for="city_input" class="acc__label">City: </label>
         <input type="text" id="city_input" placeholder="input city">
+          <div class="loader">
+            <div class="container">
+            <span id="cog-0"></span>
+            <span id="cog-45"></span>
+            <span id="cog-90"></span>
+            <span id="cog-135"></span>
+          </div>
+          </div>
       </div>
       <input type="submit" value="Отправить">
       <input type="reset" value="Reset">
